@@ -45,12 +45,12 @@ Name of the Ant project.
 =head2 filelists
 
 Array reference of
-L<XML::Ant::BuildFile::Project::FileList|XML::Ant::BuildFile::Project::FileList>s.
+L<XML::Ant::BuildFile::FileList|XML::Ant::BuildFile::FileList>s.
 
 =head2 targets
 
 Hash reference of
-L<XML::Ant::BuildFile::Project::Target|XML::Ant::BuildFile::Project::Target>s
+L<XML::Ant::BuildFile::Target|XML::Ant::BuildFile::Target>s
 from the build file.  The keys are the target names.
 
 =head2 properties
@@ -75,7 +75,7 @@ contains the following predefined properties as per the Ant documentation:
 =head2 all_targets
 
 Returns a list of all targets as
-L<XML::Ant::BuildFile::Project::Target|XML::Ant::BuildFile::Project::Target>
+L<XML::Ant::BuildFile::Target|XML::Ant::BuildFile::Target>
 objects.
 
 =head2 target_names
@@ -85,7 +85,7 @@ Returns a list of the target names from the build file.
 =head2 get_target
 
 Given a list of target names, return the corresponding
-L<XML::Ant::BuildFile::Project::Target|XML::Ant::BuildFile::Project::Target>
+L<XML::Ant::BuildFile::Target|XML::Ant::BuildFile::Target>
 objects.  In scalar context return only the last target specified.
 
 =head2 has_target
