@@ -1,6 +1,7 @@
 {{$NEXT}}
     new public apply_properties method on projects
     property substution is recursive
+    rename Target and FileList classes up a level to XML::Ant::BuildFile::
 0.204     2011-03-24 16:16:11 America/New_York
     add some spiffy delegates and attributes for targets
 0.203     2011-03-24 15:00:31 America/New_York
